[tool.poetry]
name = "skatebase"
version = "0.1.0"
description = ""
authors = ["Jay Jackson <jaynickjackson@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
falcon = "^3.0.1"
gunicorn = "^20.1.0"
tortoise-orm = "^0.17.5"
asyncpg = "^0.23.0"
uvicorn = "^0.14.0"
SQLAlchemy = "^1.4.22"
psycopg2 = "^2.9.1"
alembic = "^1.6.5"
jsonschema = "^3.2.0"
marshmallow = "^3.13.0"
marshmallow-sqlalchemy = "^0.26.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.7b0"
httpie = "^2.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
